########### 2015-6-22 #################
alter table suplychain_flashsale_orderlist add column supplier_shop varchar(32) NOT NULL after supplier_name;

########### 2015-6-15 #################
alter table django_admin_log change object_id object_id varchar(64) NOT NULL;
ALTER TABLE django_admin_log ADD INDEX IDX_OB_CO_AC_US (OBJECT_ID,CONTENT_TYPE_ID,ACTION_TIME,USER_ID);
ALTER TABLE django_admin_log ADD INDEX IDX_USER_ID_CONTENT_TYPE_ID (USER_ID,CONTENT_TYPE_ID,ACTION_TIME)

########### 2015-6-12 #################
alter table xiaolumm_xiaolumama add column hasale tinyint(1) NOT NULL;
alter table xiaolumm_xiaolumama add column charge_time datetime;

alter table flashsale_clickcount drop index date, add unique index linkid(linkid,date);
alter table flashsale_weekcount_table drop index week_code ,add unique index linkid(`linkid`,`week_code`);
########### 2015-6-10 #################
alter table suplychain_flashsale_orderdetail add column arrival_time datetime after non_arrival_quantity;

########### 2015-6-8 #################
alter table xiaolumm_xiaolumama add column progress varchar(8) NOT NULL;
CREATE INDEX `xiaolumm_xiaolumama_4ad8f7e` ON `xiaolumm_xiaolumama` (`progress`);
########### 2015-6-5 #################
ALTER TABLE django_admin_log ADD INDEX IDX_USER_ID_CONTENT_TYPE_ID (USER_ID,CONTENT_TYPE_ID);
CREATE INDEX `shop_trades_mergetrade_6bac1c39` ON `shop_trades_mergetrade` (`receiver_phone`);
 CREATE INDEX `shop_trades_mergetrade_4508aeb0` ON `shop_trades_mergetrade` (`weight_time`);

########### 2015-6-4 #################

alter table flashsale_tongji_shopping add column status int(11) NOT NULL;
########### 2015-6-3 #################
ALTER TABLE suplychain_flashsale_orderlist  MODIFY COLUMN updated datetime;
ALTER TABLE suplychain_flashsale_orderdetail  MODIFY COLUMN created datetime;
ALTER TABLE suplychain_flashsale_orderdetail  MODIFY COLUMN updated datetime;

########### 2015-6-2 #################