@@ -18,6 +18,9 @@ class OrderList(models.Model):
     QUESTION_OF_QUANTITY = u'6'  # 到货有问题
     DEALED = u'已处理' #已处理
     SAMPLE = u'7'  # 样品
+    NEAR = u'1'         #江浙沪皖
+    SHANGDONG = u'2'    #山东
+    GUANGDONG = u'3'    #广东
 
     ORDER_PRODUCT_STATUS = (
         (SUBMITTING, u'草稿'),
@@ -30,6 +33,11 @@ class OrderList(models.Model):
         (DEALED, u'已处理'),
         (SAMPLE, u'样品'),
     )
+    ORDER_DISTRICT = (
+        (NEAR, u'江浙沪皖'),
+        (SHANGDONG, u'山东'),
+        (GUANGDONG, u'广东福建'),
+    )
     
     id = BigIntegerAutoField(primary_key=True)
     buyer_name = models.CharField(default="",max_length=32, verbose_name=u'买手')
@@ -41,6 +49,8 @@ class OrderList(models.Model):
     receiver = models.CharField(default="", max_length=32, verbose_name=u'仓库负责人')
     costofems = models.IntegerField(default=0, verbose_name=u'快递费用')
     status = models.CharField(max_length=32, verbose_name=u'订货单状态', choices=ORDER_PRODUCT_STATUS)
+    p_district = models.CharField(max_length=32, verbose_name=u'地区', choices=ORDER_DISTRICT)
+    reach_standard = models.BooleanField(default=False, verbose_name=u"达标")
     created = models.DateField(auto_now_add=True, verbose_name=u'订货日期')
     updated = models.DateTimeField(auto_now=True, verbose_name=u'更新日期')
     note = models.TextField(default="", blank=True, verbose_name=u'备注信息')
