@@ -185,11 +185,19 @@
                             </td>
                             <td style="text-align:center;padding-top:20px;">
                                 <div class="input-group">
-                                    <select class="form-control" style="width: 200px; display: inline" name="type_of_order">
+                                    <select class="form-control" style="width: 200px; display: inline"
+                                            name="type_of_order">
                                         <option value="1" select="selected">正常订货</option>
                                         <option value="2">样品寄仓库</option>
                                     </select>
-                                    <button id="submit_form" type="submit" value="保存" class="btn btn-warning" style="margin-left: 100px">保存
+                                    <select class="form-control" style="width: 200px; display: inline;margin-left: 5px"
+                                            name="p_district">
+                                        <option value="1" select="selected">江浙沪皖</option>
+                                        <option value="2">山东</option>
+                                        <option value="3">广东福建</option>
+                                    </select>
+                                    <button id="submit_form" type="submit" value="保存" class="btn btn-warning"
+                                            style="margin-left: 50px">保存
                                     </button>
                                 </div>
                             </td>
