@@ -1,3 +1,7 @@
+########### 2015-6-27 #################
+alter table suplychain_flashsale_orderlist add column p_district varchar(32) default "1" NOT NULL after status;
+alter table suplychain_flashsale_orderlist add column reach_standard tinyint(1) default 0 NOT NULL after p_district;
+
 ########### 2015-6-22 #################
 alter table suplychain_flashsale_orderlist add column supplier_shop varchar(32) NOT NULL after supplier_name;
 
